api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: python-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: python-api

  template:
    metadata:
      labels:
        app: python-api

    spec:
      containers:
        - name: python-api
          image: redis-assignment-api:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8000
