python-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: python-api-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: localhost

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: python-api
                port:
                  number: 80
